[package]
name = "wall-echain"
version = "0.1.0"
edition = "2021"
authors = ["Link <link.messagebox@gmail.com>"]
description = "Wall-Echain is a product for obtaining block information, transaction details, and the latest block height of the Ethereum system through JSON-RPC."
license = "MIT"
homepage = "https://github.com/messagebox-link/Wall-Echain.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = { version = "2.3.2", default-features = false, features = [
    "encoding",
    "hyper-client",
] }
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
